kubernetes/apps/networking-system/agentgateway/config/provider/ollama.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name ollama-qwen
spec:
  parentRefs:
    - name: agentgateway-proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ollama/qwen
      backendRefs:
        - name: *name
          group: agentgateway.dev
          kind: AgentgatewayBackend
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name ollama-embed
spec:
  parentRefs:
    - name: agentgateway-proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ollama/embed
      backendRefs:
        - name: *name
          group: agentgateway.dev
          kind: AgentgatewayBackend
